# better-duckworth-lewis

./: Cricket_dataprep.ipynb  README.md  pyproject.toml
cricket-gordhandas-method/: data_prep.py  processed_data.csv
