[tool.poetry]
name = "cricket-gordhandas-method"
version = "0.1.0"
description = ""
authors = ["Ankit Gordhandas <agordhandas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
